--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,17 +1,23 @@
-# .github/workflows/hello.yml
-name: Hello GitHub Actions
+name: Node Test CI
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  greet:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Say Hello
-      run: echo "🎉 GitHub Actions 시작을 환영합니다!"
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm test
